--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ android {
     }
     buildTypes {
         debug {
-            minifyEnabled true
+            minifyEnabled false
 //            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -52,8 +52,10 @@ dependencies {
     implementation 'com.blankj:utilcode:1.17.3'
     implementation 'com.uber.autodispose:autodispose:1.0.0-RC1'
     implementation 'com.uber.autodispose:autodispose-android-archcomponents:1.0.0-RC1'
-    implementation "com.github.VictorAlbertos.RxCache:runtime:1.8.3-2.x"
+    implementation 'com.github.VictorAlbertos.RxCache:runtime:1.8.3-2.x'
     implementation 'com.github.VictorAlbertos.Jolyglot:gson:0.0.4'
     implementation 'com.jakewharton.rxbinding2:rxbinding:2.1.1'
     implementation 'com.github.tbruyelle:rxpermissions:0.10.2'
+    implementation files('libs/withub-common-util-1.4.3.jar')
+    implementation 'net.danlew:android.joda:2.9.9.4'
 }
