--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,5 @@ dependencies {
     implementation 'com.github.tbruyelle:rxpermissions:0.10.2'
     implementation files('libs/withub-common-util-1.4.3.jar')
     implementation 'net.danlew:android.joda:2.9.9.4'
+    implementation('com.github.ihsanbal:LoggingInterceptor:2.0.7')
 }
