--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ allprojects {
         google()
         jcenter()
         maven { url "https://jitpack.io" }
+        maven { url 'http://github.com/wada811/Android-Material-Design-Colors/raw/master/repository/' }
     }
 }
 
