--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,5 @@ dependencies {
     implementation 'net.danlew:android.joda:2.9.9.4'
     implementation 'com.github.ihsanbal:LoggingInterceptor:2.0.7'
     implementation 'com.wada811:android-material-design-colors:3.0.0'
+    implementation 'com.yqritc:recyclerview-flexibledivider:1.4.0'
 }
