--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,5 @@ dependencies {
     implementation 'com.github.ihsanbal:LoggingInterceptor:2.0.7'
     implementation 'com.wada811:android-material-design-colors:3.0.0'
     implementation 'com.yqritc:recyclerview-flexibledivider:1.4.0'
+    implementation 'me.yokeyword:fragmentation:1.3.6'
 }
