--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        >
         <activity android:name=".login.LoginAct"></activity>
-        <activity android:name=".business.shouWen.list.ShouWenListAct">
+        <activity android:name=".business.shouWen.list.ShouWenAct">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
