--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.unicorn.sxmobileoa.business.general.flowNode.FlowNodeAct" />
-        <activity android:name=".business.shouWen.detail.ShouWenDetailAct"></activity>
+        <activity android:name=".business.general.flowNode.FlowNodeAct" />
+        <activity android:name=".business.shouWen.detail.ShouWenDetailAct" />
+        <activity android:name=".business.general.approver.ApproverSelectionAct"></activity>
     </application>
 
 </manifest>
