--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".login.LoginAct" />
-        <activity android:name=".business.shouWen.list.ShouWenListAct">
+        <activity android:name=".login.LoginAct" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".business.shouWen.list.ShouWenListAct">
+
         </activity>
         <activity android:name=".business.general.flowNode.FlowNodeAct" />
         <activity android:name=".business.shouWen.detail.ShouWenDetailAct" />
