--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,7 @@ dependencies {
     implementation 'com.jakewharton.rxbinding2:rxbinding-support-v4:2.1.1'
     implementation 'com.github.tbruyelle:rxpermissions:0.10.2'
     implementation files('libs/withub-common-util-1.4.3.jar')
-    implementation 'net.danlew:android.joda:2.9.9.4'
+    implementation 'joda-time:joda-time:2.10'
     implementation 'com.github.ihsanbal:LoggingInterceptor:2.0.7'
     implementation 'com.wada811:android-material-design-colors:3.0.0'
     implementation 'com.yqritc:recyclerview-flexibledivider:1.4.0'
