--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,8 @@ dependencies {
     implementation 'com.jakewharton.rxbinding2:rxbinding:2.1.1'
     implementation 'com.jakewharton.rxbinding2:rxbinding-support-v4:2.1.1'
     implementation 'com.github.tbruyelle:rxpermissions:0.10.2'
+
+//  TODO 混淆
     implementation files('libs/withub-common-util-1.4.3.jar')
     implementation 'joda-time:joda-time:2.10'
     implementation 'com.github.ihsanbal:LoggingInterceptor:2.0.7'
