--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,5 @@ dependencies {
     implementation 'com.wada811:android-material-design-colors:3.0.0'
     implementation 'com.yqritc:recyclerview-flexibledivider:1.4.0'
     implementation 'me.yokeyword:fragmentation:1.3.6'
+    implementation 'com.google.android:flexbox:1.0.0'
 }
