--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,10 +48,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
     implementation 'com.orhanobut:logger:2.2.0'
     implementation 'com.blankj:utilcode:1.17.3'
-    implementation 'com.uber.autodispose:autodispose:1.0.0-RC1'
-    implementation 'com.uber.autodispose:autodispose-android-archcomponents:1.0.0-RC1'
-    implementation 'com.github.VictorAlbertos.RxCache:runtime:1.8.3-2.x'
-    implementation 'com.github.VictorAlbertos.Jolyglot:gson:0.0.4'
+    implementation 'com.github.florent37:rxlifecycle:2.0.4'
     implementation 'com.jakewharton.rxbinding2:rxbinding:2.1.1'
     implementation 'com.jakewharton.rxbinding2:rxbinding-support-v4:2.1.1'
     implementation 'com.github.tbruyelle:rxpermissions:0.10.2'
