--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,13 +52,11 @@ dependencies {
     implementation 'com.jakewharton.rxbinding2:rxbinding:2.1.1'
     implementation 'com.jakewharton.rxbinding2:rxbinding-support-v4:2.1.1'
     implementation 'com.github.tbruyelle:rxpermissions:0.10.2'
-
-//  TODO 混淆
-    implementation files('libs/withub-common-util-1.4.3.jar')
-    implementation 'joda-time:joda-time:2.10'
+    //  TODO 混淆
+    implementation 'net.danlew:android.joda:2.9.9.4'
     implementation 'com.github.ihsanbal:LoggingInterceptor:2.0.7'
     implementation 'com.wada811:android-material-design-colors:3.0.0'
     implementation 'com.yqritc:recyclerview-flexibledivider:1.4.0'
     implementation 'me.yokeyword:fragmentation:1.3.6'
-    implementation 'com.google.android:flexbox:1.0.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
