--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     implementation 'com.blankj:utilcode:1.17.3'
     implementation 'com.github.florent37:rxlifecycle:2.0.4'
     implementation 'com.jakewharton.rxbinding2:rxbinding:2.1.1'
+    implementation 'com.jakewharton.rxbinding2:rxbinding-kotlin:2.1.1'
     implementation 'com.jakewharton.rxbinding2:rxbinding-support-v4:2.1.1'
     implementation 'com.github.tbruyelle:rxpermissions:0.10.2'
     //  TODO 混淆
