--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,10 +20,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".main.BgsxAct" />
-        <activity android:name=".remove.business.gwgl.fwlc.FwlcAct" />
-        <activity android:name=".remove.business.general.flowNode.FlowNodeAct" />
+        <activity android:name=".remove.business.flowNode.FlowNodeAct" />
         <!-- <activity android:name=".business.gwgl.detail.ShouWenDetailAct" /> -->
-        <activity android:name=".remove.business.general.approver.ApproverSelectionAct" />
+        <activity android:name=".remove.business.ApproverSelectionAct" />
         <activity android:name=".dblb.DblbAct" />
         <activity android:name=".detail.JddbDetailAct">
 
