--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,15 +16,15 @@ android {
         versionCode 1
         versionName "1.0"
     }
-    lintOptions {
-        checkReleaseBuilds false
-        // Or, if you prefer, you can continue to check for errors in release builds,
-        // but continue the build even when errors are found:
-        abortOnError false
-    }
+//    lintOptions {
+//        checkReleaseBuilds false
+//        // Or, if you prefer, you can continue to check for errors in release builds,
+//        // but continue the build even when errors are found:
+//        abortOnError false
+//    }
     buildTypes {
         debug {
-            minifyEnabled true
+            minifyEnabled false
 //            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -54,6 +54,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.orhanobut:logger:2.2.0'
+    //noinspection GradleDependency
     implementation 'com.blankj:utilcode:1.17.3'
     implementation 'com.github.florent37:rxlifecycle:2.0.4'
     implementation 'com.jakewharton.rxbinding2:rxbinding:2.1.1'
