--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.unicorn.sxmobileoa">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".app.App"
-        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="AllowBackup,GoogleAppIndexingWarning">
         <activity android:name=".login.LoginAct">
              </activity>
         <activity android:name=".bgsx.BgsxAct" />
         <activity android:name=".toRemove.flowNode.FlowNodeAct" />
         <!-- <activity android:name=".business.gwgl.detail.ShouWenDetailAct" /> -->
-        <activity android:name=".toRemove.ApproverSelectionAct" />
         <activity android:name=".dblb.DblbAct" />
         <activity android:name=".detail.JddbDetailAct"></activity>
         <activity android:name=".court.ui.CourtAct">
