--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         <activity android:name=".toRemove.flowNode.FlowNodeAct" />
         <!-- <activity android:name=".business.gwgl.detail.ShouWenDetailAct" /> -->
         <activity android:name=".dblb.DblbAct" />
-        <activity android:name=".detail.JddbDetailAct"></activity>
+        <activity android:name=".detail.JddbDetailAct"/>
         <activity android:name=".court.ui.CourtAct">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
