--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,12 +16,12 @@ android {
         versionCode 1
         versionName "1.0"
     }
-//    lintOptions {
-//        checkReleaseBuilds false
-//        // Or, if you prefer, you can continue to check for errors in release builds,
-//        // but continue the build even when errors are found:
-//        abortOnError false
-//    }
+    lintOptions {
+        checkReleaseBuilds false
+        // Or, if you prefer, you can continue to check for errors in release builds,
+        // but continue the build even when errors are found:
+        abortOnError false
+    }
     buildTypes {
         debug {
             minifyEnabled false
