--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,12 +16,12 @@ android {
         versionCode 1
         versionName "1.0"
     }
-    lintOptions {
-        checkReleaseBuilds false
-        // Or, if you prefer, you can continue to check for errors in release builds,
-        // but continue the build even when errors are found:
-        abortOnError false
-    }
+//    lintOptions {
+//        checkReleaseBuilds false
+//        // Or, if you prefer, you can continue to check for errors in release builds,
+//        // but continue the build even when errors are found:
+//        abortOnError false
+//    }
     buildTypes {
         debug {
             minifyEnabled false
@@ -50,7 +50,12 @@ dependencies {
     implementation 'com.google.dagger:dagger:2.16'
     kapt 'com.google.dagger:dagger-compiler:2.16'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-    implementation 'com.squareup.retrofit2:converter-simplexml:2.4.0'
+    implementation('org.simpleframework:simple-xml:2.7.1') {
+        exclude group: 'xpp3', module: 'xpp3'
+    }
+    implementation('com.squareup.retrofit2:converter-simplexml:2.4.0') {
+        exclude group: 'org.simpleframework', module: 'simple-xml'
+    }
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.orhanobut:logger:2.2.0'
@@ -61,7 +66,10 @@ dependencies {
     implementation 'com.jakewharton.rxbinding2:rxbinding-kotlin:2.1.1'
     implementation 'com.github.tbruyelle:rxpermissions:0.10.2'
     implementation 'net.danlew:android.joda:2.9.9.4'
-    implementation 'com.github.ihsanbal:LoggingInterceptor:2.0.7'
+    implementation('com.github.ihsanbal:LoggingInterceptor:2.0.7') {
+        exclude group: 'org.json', module: 'json'
+    }
     implementation 'com.wada811:android-material-design-colors:3.0.0'
     implementation 'com.yqritc:recyclerview-flexibledivider:1.4.0'
+
 }
