--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,14 +18,16 @@
         <activity android:name=".bgsx.BgsxAct" />
         <activity android:name=".toRemove.flowNode.FlowNodeAct" />
         <!-- <activity android:name=".business.gwgl.detail.ShouWenDetailAct" /> -->
-        <activity android:name=".dblb.DblbAct" />
-        <activity android:name=".detail.JddbDetailAct"/>
-        <activity android:name=".court.ui.CourtAct">
+        <activity android:name=".dblb.DblbAct" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".detail.JddbDetailAct"/>
+        <activity android:name=".court.ui.CourtAct">
+
         </activity>
 
     </application>
