--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
-        <activity android:name=".login.ui.LoginAct">
+        <activity android:name=".login.login.ui.LoginAct">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".court.ui.CourtAct" />
+        <activity android:name="com.unicorn.sxmobileoa.login.court.ui.CourtAct" />
         <activity android:name=".main.MainAct" />
         <activity android:name=".dblb.ui.DblbAct" />
         <activity android:name=".detail.JddbDetailAct" />
