--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ android {
 //    }
     buildTypes {
         debug {
-            minifyEnabled true
+            minifyEnabled false
 //            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -71,5 +71,9 @@ dependencies {
     }
     implementation 'com.wada811:android-material-design-colors:3.0.0'
     implementation 'com.yqritc:recyclerview-flexibledivider:1.4.0'
+
+    implementation 'com.youth.banner:banner:1.4.10'
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    kapt 'com.github.bumptech.glide:compiler:4.8.0'
 
 }
