--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,7 @@ dependencies {
     implementation 'com.google.dagger:dagger:2.16'
     kapt 'com.google.dagger:dagger-compiler:2.16'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-    implementation('org.simpleframework:simple-xml:2.7.1') {
+    implementation ('org.simpleframework:simple-xml:2.7.1') {
         exclude group: 'xpp3', module: 'xpp3'
     }
     implementation('com.squareup.retrofit2:converter-simplexml:2.4.0') {
@@ -75,5 +75,11 @@ dependencies {
     implementation 'com.youth.banner:banner:1.4.10'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     kapt 'com.github.bumptech.glide:compiler:4.8.0'
+    implementation 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
+    implementation 'com.github.devlight.navigationtabstrip:navigationtabstrip:1.0.4'
+    implementation 'it.neokree:MaterialTabs:0.11'
+    implementation 'com.nshmura:recyclertablayout:1.5.0'
+    implementation 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
+
 
 }
