--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
-    implementation 'com.android.support:cardview-v7:27.1.1'
+//    implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
@@ -71,15 +71,6 @@ dependencies {
     }
     implementation 'com.wada811:android-material-design-colors:3.0.0'
     implementation 'com.yqritc:recyclerview-flexibledivider:1.4.0'
-
-    implementation 'com.youth.banner:banner:1.4.10'
-    implementation 'com.github.bumptech.glide:glide:4.8.0'
-    kapt 'com.github.bumptech.glide:compiler:4.8.0'
-    implementation 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
-    implementation 'com.github.devlight.navigationtabstrip:navigationtabstrip:1.0.4'
-    implementation 'it.neokree:MaterialTabs:0.11'
-    implementation 'com.nshmura:recyclertablayout:1.5.0'
-    implementation 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
-
-
+//    implementation 'com.github.bumptech.glide:glide:4.8.0'
+//    kapt 'com.github.bumptech.glide:compiler:4.8.0'
 }
