--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             </intent-filter>
         </activity>
         <activity android:name="com.unicorn.sxmobileoa.login.court.ui.CourtAct" />
-        <activity android:name=".main.MainAct" />
+        <activity android:name=".main.ui.MainAct" />
         <activity android:name=".dblb.ui.DblbAct" />
         <activity android:name=".detail.JddbDetailAct" />
 
