--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,8 @@
         </activity>
         <activity android:name="com.unicorn.sxmobileoa.login.court.ui.CourtAct" />
         <activity android:name=".main.ui.MainAct" />
-        <activity android:name=".dblb.ui.DblbAct" />
-        <activity android:name=".detail.JddbDetailAct" />
+        <activity android:name=".dbxx.ui.DbxxAct" />
+        <activity android:name=".detail.ui.DetailAct" />
 
     </application>
 
