审批意见分开显示

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".spyj.Spyj"></activity>
+        <activity android:name=".spyj.SpyjAct"></activity>
     </application>
 
 </manifest>
