--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         <activity android:name="com.unicorn.sxmobileoa.simple.court.ui.CourtAct" />
         <activity android:name=".main.main.ui.MainAct" />
         <activity android:name=".main.dbxx.ui.DbxxAct" />
-        <activity android:name=".detail.ui.SpdAct" />
+        <activity android:name=".spd.ui.SpdAct" />
         <activity android:name=".spyj.pager.SpyjPagerAct" />
         <activity android:name=".spyj.SpyjAct" />
         <activity android:name="com.unicorn.sxmobileoa.simple.dept.ui.DeptAct" />
