--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         </activity>
         <activity android:name="com.unicorn.sxmobileoa.simple.court.ui.CourtAct" />
         <activity android:name="com.unicorn.sxmobileoa.simple.main.ui.MainAct" />
-        <activity android:name="com.unicorn.sxmobileoa.dbxx.ui.DbxxAct" />
+        <activity android:name="com.unicorn.sxmobileoa.simple.dbxx.ui.DbxxAct" />
         <activity android:name=".spd.ui.SpdAct" />
         <activity android:name=".spyj.pager.SpyjPagerAct" />
         <activity android:name=".spyj.SpyjAct" />
