--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "com.unicorn.sxmobileoa"
-        minSdkVersion 17
+        minSdkVersion 19
         //noinspection OldTargetApi
         targetSdkVersion 27
         versionCode 1
@@ -72,6 +72,7 @@ dependencies {
     implementation 'com.wada811:android-material-design-colors:3.0.0'
     implementation 'com.yqritc:recyclerview-flexibledivider:1.4.0'
     implementation 'com.github.florent37:rxsharedpreferences:1.0.0'
+    implementation 'com.github.DingMouRen:LayoutManagerGroup:1e6f4f96eb'
 //    implementation 'com.github.bumptech.glide:glide:4.8.0'
 //    kapt 'com.github.bumptech.glide:compiler:4.8.0'
 }
