--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,9 @@ dependencies {
     implementation 'com.yqritc:recyclerview-flexibledivider:1.4.0'
     implementation 'com.github.florent37:rxsharedpreferences:1.0.0'
     implementation 'com.github.DingMouRen:LayoutManagerGroup:1e6f4f96eb'
+    implementation 'com.f2prateek.dart:dart-annotations:3.0.1'
+    implementation 'com.f2prateek.dart:dart:3.0.1'
+    kapt 'com.f2prateek.dart:dart-processor:3.0.1'
 //    implementation 'com.github.bumptech.glide:glide:4.8.0'
 //    kapt 'com.github.bumptech.glide:compiler:4.8.0'
 }
