--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,7 @@ dependencies {
     implementation 'com.f2prateek.dart:dart-annotations:3.0.1'
     implementation 'com.f2prateek.dart:dart:3.0.1'
     kapt 'com.f2prateek.dart:dart-processor:3.0.1'
+    implementation 'com.github.arcadefire:nice-spinner:1.3.4'
 //    implementation 'com.github.bumptech.glide:glide:4.8.0'
 //    kapt 'com.github.bumptech.glide:compiler:4.8.0'
 }
