--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,9 +23,11 @@
         <activity android:name=".simple.main.ui.MainAct" />
         <activity android:name=".simple.dbxx.ui.DbxxAct" />
         <activity android:name=".simple.dept.ui.DeptAct" />
-        <activity android:name=".header.nbfw.NbfwAct" />
         <activity android:name=".spdNext.ui.SpdNextAct">
         </activity>
+
+        <activity android:name=".header.nbfw.NbfwAct" />
+        <activity android:name=".header.wbfw.WbfwAct" />
     </application>
 
 </manifest>
