--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         <activity android:name=".simple.main.ui.MainAct" />
         <activity android:name=".simple.dbxx.ui.DbxxAct" />
         <activity android:name=".simple.dept.ui.DeptAct" />
-        <activity android:name=".simple.code.ui.CodeAct" />
+        <activity android:name="com.unicorn.sxmobileoa.select.code.ui.CodeAct" />
         <activity android:name=".spdNext.ui.SpdNextAct"></activity>
         <activity android:name=".simple.deptUser.ui.DeptUserAct" />
         <activity android:name=".header.nbfw.NbfwAct" />
