--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
         <activity android:name=".header.qjsq.QjsqAct" />
         <activity android:name=".header.gcsq.GcsqAct" />
         <activity android:name=".header.jdsq.JdsqAct" />
+        <activity android:name=".header.wply.WplyAct" />
 
         <activity android:name=".header.sbbf.EquipmentAct"></activity>
     </application>
