--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
         <activity android:name=".header.jdsq.JdsqAct" />
         <activity android:name=".header.wply.WplyAct" />
 
-        <activity android:name=".header.sbbf.EquipmentAct"></activity>
+        <activity android:name=".header.sbbf.SbbfDetailAct"></activity>
     <activity android:name=".header.wply.WplyDetailAct"/>
     </application>
 
