--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
         <activity android:name=".header.sbly.SblyAct" />
         <activity android:name=".header.sbbf.SbbfDetailAct"></activity>
         <activity android:name=".header.wply.detail.WplyDetailAct" />
+        <activity android:name=".header.sbly.SblyDetailAct"/>
     </application>
 
 </manifest>
