添加用车申请

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,8 @@
         <activity android:name=".header.jdsq.JdsqAct" />
         <activity android:name=".header.wply.WplyAct" />
         <activity android:name=".header.sbly.SblyAct" />
-        <activity android:name=".header.sbbf.SbbfDetailAct"></activity>
+        <activity android:name=".header.ycsq.YcsqAct"/>
+        <activity android:name=".header.sbbf.SbbfDetailAct"/>
         <activity android:name=".header.wply.detail.WplyDetailAct" />
         <activity android:name=".header.sbly.SblyDetailAct"/>
     </application>
