--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,8 @@ dependencies {
     kapt 'com.f2prateek.dart:dart-processor:3.0.1'
     implementation 'com.wdullaer:materialdatetimepicker:3.6.3'
     implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    kapt 'com.jakewharton:butterknife-compiler:8.8.1'
 //    implementation 'com.github.bumptech.glide:glide:4.8.0'
 //    kapt 'com.github.bumptech.glide:compiler:4.8.0'
 }
