--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
         <activity android:name=".header.sbbf.SbbfDetailAct"/>
         <activity android:name=".header.wply.detail.WplyDetailAct" />
         <activity android:name=".header.sbly.SblyDetailAct"/>
+        <activity android:name=".header.ycsq.cllx.ui.CllxAct"/>
     </application>
 
 </manifest>
