--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         applicationId "com.unicorn.sxmobileoa"
         minSdkVersion 19
         //noinspection OldTargetApi
-        targetSdkVersion 27
+        targetSdkVersion 20
         versionCode 1
         versionName "1.0"
     }
@@ -74,4 +74,5 @@ dependencies {
     kapt 'com.jakewharton:butterknife-compiler:8.8.1'
 //    implementation 'com.github.bumptech.glide:glide:4.8.0'
 //    kapt 'com.github.bumptech.glide:compiler:4.8.0'
+    implementation 'com.zhy:okhttputils:2.6.2'
 }
