--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,3 +76,7 @@ dependencies {
 //    kapt 'com.github.bumptech.glide:compiler:4.8.0'
     implementation 'com.zhy:okhttputils:2.6.2'
 }
+
+androidExtensions {
+    experimental = true
+}
