--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,6 +84,8 @@ dependencies {
     implementation 'com.zhy:okhttputils:2.6.2'
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.github.vipulasri:timelineview:1.0.6'
+    implementation 'me.majiajie:pager-bottom-tab-strip:2.3.0'
+    implementation 'com.loopeer.lib:shadow:0.0.4-beta2'
 }
 
 androidExtensions {
